force-app/main/default/objects/Bill__c/fields/bill_id__c.field-meta.xml
<CustomField>
    <fullName>bill_id__c</fullName>
    <label>bill_id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>