force-app/main/default/objects/Bill__c/fields/for_user__c.field-meta.xml
<CustomField>
    <fullName>for_user__c</fullName>
    <label>for_user</label>
    <length>250</length>
    <type>Text</type>
</CustomField>