force-app/main/default/objects/Bill__c/fields/paid__c.field-meta.xml
<CustomField>
    <fullName>paid__c</fullName>
    <label>paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>