force-app/main/default/objects/Bill__c/fields/successful__c.field-meta.xml
<CustomField>
    <fullName>successful__c</fullName>
    <label>successful</label>
    <length>250</length>
    <type>Text</type>
</CustomField>